cluster/apps/networking-system/external/omada-controller/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-controller
  labels:
    app.kubernetes.io/name: omada-controller
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.244.0.0/16,10.10.0.0/24,192.168.50.0/24,192.168.10.0/24,192.168.200.0/24
    nginx.ingress.kubernetes.io/upstream-vhost: omada.${SECRET_DOMAIN_0}:8043
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "~https://(.+):8043/(.+)/login$"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://$1/$2/login"
spec:
  ingressClassName: nginx
  rules:
    - host: &host omada.${SECRET_DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omada-controller
                port:
                  number: 8043
  tls:
    - hosts:
        - *host
      secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
